@@ -1,3 +1,7 @@
+2011-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* texmfmp.h (ENABLE_PIPES): New macro for pipe support.
+
 2011-10-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* configure.ac: Add poppler feature tests for luaTeX.
